@@ -2,7 +2,6 @@ package com.blakube.bktops.plugin.schedule;
 
 import com.blakube.bktops.api.queue.Priority;
 import com.blakube.bktops.api.registry.TopRegistry;
-import com.blakube.bktops.api.timed.TimedTop;
 import com.blakube.bktops.api.top.Top;
 import com.blakube.bktops.plugin.provider.TimedValueProvider;
 import com.blakube.bktops.plugin.top.DefaultTimedTop;
@@ -15,42 +14,39 @@ import org.jetbrains.annotations.NotNull;
 
 import java.util.*;
 import java.util.concurrent.CompletableFuture;
-import java.util.stream.Collectors;
 
 public final class ProcessorScheduler {
 
     private final JavaPlugin plugin;
     private final TopRegistry<UUID> registry;
     private final List<BukkitTask> tasks;
-    private final Map<String, Long> nextProcessAtMs = new HashMap<>();
+
+    private final Map<String, Long> nextProcessAtMs      = new HashMap<>();
     private final Map<String, Long> nextOnlineEnqueueAtMs = new HashMap<>();
+    private final Map<String, Integer> rotativeOffset    = new HashMap<>();
 
     public ProcessorScheduler(@NotNull JavaPlugin plugin, @NotNull TopRegistry<UUID> registry) {
-        this.plugin = plugin;
+        this.plugin   = plugin;
         this.registry = registry;
-        this.tasks = new ArrayList<>();
+        this.tasks    = new ArrayList<>();
     }
 
     public void start() {
         plugin.getLogger().info("Initializing processor scheduler...");
 
-        List<CompletableFuture<Void>> futures = new ArrayList<>();
+        List<CompletableFuture<Void>> futures       = new ArrayList<>();
         List<TimedValueProvider<UUID>> timedProviders = new ArrayList<>();
 
         for (Top<UUID> top : registry.getAll()) {
-            if (top instanceof DefaultTimedTop) {
-                var timedTop = (DefaultTimedTop<UUID>) top;
-                if (timedTop.getValueProvider() instanceof TimedValueProvider) {
-                    var provider = (TimedValueProvider<UUID>) timedTop.getValueProvider();
-                    timedProviders.add(provider);
-                    futures.add(provider.getInitializationFuture());
-                }
+            if (top instanceof DefaultTimedTop<UUID> timedTop
+                    && timedTop.getValueProvider() instanceof TimedValueProvider<UUID> provider) {
+                timedProviders.add(provider);
+                futures.add(provider.getInitializationFuture());
             }
         }
 
         if (!futures.isEmpty()) {
             plugin.getLogger().info("Waiting for " + futures.size() + " timed providers to load async...");
-
             CompletableFuture.allOf(futures.toArray(new CompletableFuture[0]))
                     .thenRun(() -> Bukkit.getScheduler().runTask(plugin, () -> startTasks(timedProviders)))
                     .exceptionally(ex -> {
@@ -66,8 +62,7 @@ public final class ProcessorScheduler {
         plugin.getLogger().info("All providers initialized! Starting tasks...");
 
         for (Top<UUID> top : registry.getAll()) {
-            if (top.getValueProvider() instanceof TimedValueProvider) {
-                var provider = (TimedValueProvider<UUID>) top.getValueProvider();
+            if (top.getValueProvider() instanceof TimedValueProvider<UUID> provider) {
                 Map<UUID, Double> snapshots = provider.getSnapshotCache();
                 if (!snapshots.isEmpty()) {
                     top.enqueue(new ArrayList<>(snapshots.keySet()), Priority.HIGH, "server_startup");
@@ -94,20 +89,18 @@ public final class ProcessorScheduler {
             @Override
             public void run() {
                 for (Top<UUID> top : registry.getAll()) {
-                    if (!top.getProcessor().isEnabled()) {
-                        continue;
-                    }
+                    if (!top.getProcessor().isEnabled()) continue;
+
                     int tickDelay = top.getConfig().getTickDelay();
                     if (tickDelay <= 1) {
                         top.getProcessor().processBatch(top.getConfig().getBatchSize());
                         continue;
                     }
 
-                    long now = System.currentTimeMillis();
+                    long now     = System.currentTimeMillis();
                     long periodMs = tickDelay * 50L;
-                    String id = top.getId();
-                    long nextDue = nextProcessAtMs.getOrDefault(id, 0L);
-                    if (now >= nextDue) {
+                    String id    = top.getId();
+                    if (now >= nextProcessAtMs.getOrDefault(id, 0L)) {
                         top.getProcessor().processBatch(top.getConfig().getBatchSize());
                         nextProcessAtMs.put(id, now + periodMs);
                     }
@@ -124,23 +117,19 @@ public final class ProcessorScheduler {
             public void run() {
                 List<UUID> onlineUUIDs = Bukkit.getOnlinePlayers().stream()
                         .map(Player::getUniqueId)
-                        .collect(Collectors.toList());
+                        .toList();
 
-                if (onlineUUIDs.isEmpty()) {
-                    return;
-                }
+                if (onlineUUIDs.isEmpty()) return;
 
+                long now = System.currentTimeMillis();
                 for (Top<UUID> top : registry.getAll()) {
-                    if (top.getConfig().isEnableOnlineQueue()) {
-                        String id = top.getId();
-                        int intervalTicks = top.getConfig().getOnlineQueueInterval();
-                        long periodMs = Math.max(1, intervalTicks) * 50L;
-                        long now = System.currentTimeMillis();
-                        long nextDue = nextOnlineEnqueueAtMs.getOrDefault(id, 0L);
-                        if (now >= nextDue) {
-                            top.enqueue(onlineUUIDs, Priority.HIGH, "online_periodic");
-                            nextOnlineEnqueueAtMs.put(id, now + periodMs);
-                        }
+                    if (!top.getConfig().isEnableOnlineQueue()) continue;
+
+                    String id      = top.getId();
+                    long periodMs  = Math.max(1, top.getConfig().getOnlineQueueInterval()) * 50L;
+                    if (now >= nextOnlineEnqueueAtMs.getOrDefault(id, 0L)) {
+                        top.enqueue(onlineUUIDs, Priority.HIGH, "online_periodic");
+                        nextOnlineEnqueueAtMs.put(id, now + periodMs);
                     }
                 }
             }
@@ -151,39 +140,28 @@ public final class ProcessorScheduler {
 
     private void startRotativeQueueTask() {
         BukkitTask task = new BukkitRunnable() {
-            private int offset = 0;
-
             @Override
             public void run() {
                 for (Top<UUID> top : registry.getAll()) {
-                    if (!top.getConfig().isEnableRotativeQueue()) {
-                        continue;
-                    }
+                    if (!top.getConfig().isEnableRotativeQueue()) continue;
 
                     var entries = top.getEntries();
-                    if (entries.isEmpty()) {
-                        continue;
-                    }
+                    if (entries.isEmpty()) continue;
 
-                    int maxSize = Math.min(
-                            top.getConfig().getRotativeQueueSize(),
-                            entries.size()
-                    );
+                    String id      = top.getId();
+                    int maxSize    = Math.min(top.getConfig().getRotativeQueueSize(), entries.size());
+                    int offset     = rotativeOffset.getOrDefault(id, 0);
+                    int batchSize  = 10;
 
-                    int batchSize = 10;
-                    for (int i = 0; i < batchSize && offset < maxSize; i++) {
-                        var entry = entries.get(offset);
+                    for (int i = 0; i < batchSize && offset < maxSize; i++, offset++) {
                         top.enqueue(
-                                List.of(entry.getIdentifier()),
+                                List.of(entries.get(offset).getIdentifier()),
                                 Priority.MEDIUM,
                                 "rotative_check"
                         );
-                        offset++;
                     }
 
-                    if (offset >= maxSize) {
-                        offset = 0;
-                    }
+                    rotativeOffset.put(id, offset >= maxSize ? 0 : offset);
                 }
             }
         }.runTaskTimer(plugin, 40L, 40L);
@@ -196,29 +174,18 @@ public final class ProcessorScheduler {
             @Override
             public void run() {
                 for (Top<UUID> top : registry.getAll()) {
-                    if (top instanceof TimedTop) {
-                        TimedTop<UUID> timedTop = (TimedTop<UUID>) top;
+                    if (!(top instanceof DefaultTimedTop<UUID> timedTop)) continue;
+                    if (!timedTop.shouldReset()) continue;
 
-                        if (timedTop.shouldReset()) {
-                            plugin.getLogger().info("Resetting top: " + timedTop.getId());
-
-                            if (timedTop instanceof com.blakube.bktops.plugin.top.DefaultTimedTop) {
-                                var impl = (com.blakube.bktops.plugin.top.DefaultTimedTop<UUID>) timedTop;
-
-                                impl.resetAsync()
-                                        .thenRun(() -> {
-                                            plugin.getLogger().info("Reset completed: " + timedTop.getId());
-                                        })
-                                        .exceptionally(ex -> {
-                                            plugin.getLogger().severe("Error resetting " + timedTop.getId() + ": " + ex.getMessage());
-                                            ex.printStackTrace();
-                                            return null;
-                                        });
-                            } else {
-                                timedTop.reset();
-                            }
-                        }
-                    }
+                    plugin.getLogger().info("Resetting top: " + timedTop.getId());
+                    timedTop.resetAsync()
+                            .thenRun(() -> plugin.getLogger().info("Reset completed: " + timedTop.getId()))
+                            .exceptionally(ex -> {
+                                plugin.getLogger().severe("Error resetting " + timedTop.getId()
+                                        + ": " + ex.getMessage());
+                                ex.printStackTrace();
+                                return null;
+                            });
                 }
             }
         }.runTaskTimer(plugin, 1200L, 1200L);
